# shell

./: shell.cabal
