name:                shell
version:             0.1.0
synopsis:            Command shell using FRP
description:         Please see README.md
homepage:            https://github.com/Ziphilt/shell#readme
license:             GPL2
license-file:        LICENSE
author:              Cal Stepanian
-- maintainer:          example@example.com
copyright:           2016 Cal Stepanian
category:            Shell
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable shell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shell
  default-language:    Haskell2010

test-suite shell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Ziphilt/shell
